# network-insight-sdk-generic-datasources

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  EXAMPLE.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
network_insight_sdk_generic_datasources/: main.py
network_insight_sdk_generic_datasources/archive/: zip_archiver.py
network_insight_sdk_generic_datasources/cisco/: cisco.yml  cisco_n5k_command_map.yml  cisco_pre_post_processor.py  n5k.yml
network_insight_sdk_generic_datasources/common/: constants.py  import_module_utilities.py  log.py  physical_device.py  utilities.py  vrni_uani_ops.py  yaml_utilities.py
network_insight_sdk_generic_datasources/connection/: device_type.py  ssh_connect_handler.py
network_insight_sdk_generic_datasources/devices/cisco/: cisco.yml  n5k.yml
network_insight_sdk_generic_datasources/devices/juniper_srx/: juniper_srx.yml
network_insight_sdk_generic_datasources/joiner/: table_joiner.py
network_insight_sdk_generic_datasources/juniper_srx/: juniper_srx.yml  juniper_srx_pre_post_processor.py  srx.yml
network_insight_sdk_generic_datasources/parsers/: __init__.py
network_insight_sdk_generic_datasources/parsers/common/: block_parser.py  (+5 more)
network_insight_sdk_generic_datasources/ubiquiti/: edgerouter-lite.yml  ubnt.yml  ubnt_pre_post_processor.py
network_insight_sdk_generic_datasources/writers/: csv_writer.py
test/sample_csv_files/: mac-address-table.csv  neighbors.csv  port-channels.csv  router-interfaces.csv  routes.csv  switch-ports.csv  switch.csv  vrfs.csv
test/simulator/: ssh_server.py
(+51 files in other folders)
