[metadata]
name = network-insight-sdk-generic-datasources
url = https://github.com
author = vRNI
author-email = opensource@internap.com
summary = Switch command output parser and table generator.
description-file = README.md
license = Apache Software License
home-page = https://github.com
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Testing
    Topic :: System :: Emulators

[files]
packages =
    network_insight_sdk_generic_datasources

[entry_points]
console_scripts =
    network-insight-sdk-generic-datasources = network_insight_sdk_generic_datasources.main:main


[nosetests]
tests = tests
no-path-adjustment = 1
logging-level=DEBUG
verbosity = 2

[wheel]
universal = 1
